--- a/tictactoe.html
+++ b/tictactoe.html
@@ -17,23 +17,19 @@ const CELL_SIZE_X = 100;
 const CELL_SIZE_Y = 100;
 const CELLS_X = 3;
 const CELLS_Y = 3;
+const TOTAL_CELLS = 9;
 
 function Board() {
 	var cells = [
-		[EMPTY, EMPTY, EMPTY],
-		[EMPTY, EMPTY, EMPTY],
-		[EMPTY, EMPTY, EMPTY]
+		EMPTY, EMPTY, EMPTY,
+		EMPTY, EMPTY, EMPTY,
+		EMPTY, EMPTY, EMPTY
 	];
 	
 	const winningStreaks = [
-		[[0,0],[1,0],[2,0]],
-		[[0,1],[1,1],[2,1]],
-		[[0,2],[1,2],[2,2]],
-		[[0,0],[0,1],[0,2]],
-		[[1,0],[1,1],[1,2]],
-		[[2,0],[2,1],[2,2]],
-		[[0,0],[1,1],[2,2]],
-		[[0,2],[1,1],[2,0]],
+		[0,1,2], [3,4,5], [6,7,8],
+		[0,3,6], [1,4,7], [2,5,8],
+		[0,4,8], [2,4,6]
 	];
 	
 	var nAvailableCells = 9;
@@ -43,7 +39,7 @@ function Board() {
 	currentTurn = CROSS;
 	
     function hasWinningStreak(streak, side) {
-	   result = streak.every( coords => cells[coords[0]][coords[1]] == side);
+	   result = streak.every( n => cells[n] == side);
 	   if (result) {
 		winningCells = streak;
 	   }
@@ -54,23 +50,23 @@ function Board() {
 		return winningStreaks.some( streak => hasWinningStreak(streak, side) );
 	}
 	
-	function drawCell(x,y,content,isWinner) {
-		onDrawCell.forEach( callback => callback(x,y,content,isWinner) );
+	function drawCell(n, content,isWinner) {
+		onDrawCell.forEach( callback => callback(n, content, isWinner) );
 	}
 	
-	function setCell(x,y,content) {
-		cells[x][y] = content;
-		drawCell(x,y,content,false);
+	function setCell(n, content) {
+		cells[n] = content;
+		drawCell(n, content, false);
 	}
 	
-	this.move = function (x,y) {
-	    if (cells[x][y] != EMPTY) return;
+	this.move = function (n) {
+	    if (cells[n] != EMPTY) return;
 		if (winner != EMPTY) return;
 		
-		setCell(x,y,currentTurn);
+		setCell(n, currentTurn);
 		if (isWinner(currentTurn)) {
 			winner = currentTurn;
-			winningCells.forEach( xy => drawCell(xy[0],xy[1],winner, true) );
+			winningCells.forEach( n => drawCell(n, winner, true) );
 		}
 		currentTurn = currentTurn == CROSS ? CIRCLE : CROSS;
 		--nAvailableCells;
@@ -80,8 +76,8 @@ function Board() {
 	   onDrawCell.push(callback)
 	}
 	
-	this.cell = function(x,y) {
-		return cells[x][y];
+	this.cell = function(n) {
+		return cells[n];
 	}
 	
 	this.isGameEnded = function() {
@@ -92,12 +88,11 @@ function Board() {
 function AutoPlayer(board) {
 	function getAvailableCells() {
 		availableCells = [];
-		for (x=0; x<CELLS_X; ++x)
-			for (y=0; y<CELLS_Y; ++y) {
-				if (board.cell(x,y) == EMPTY) {
-					availableCells.push([x,y]);
-				}
+		for (n=0; n<TOTAL_CELLS; ++n) {
+			if (board.cell(n) == EMPTY) {
+				availableCells.push(n);
 			}
+		}
 		return availableCells;
 	}
 	
@@ -108,7 +103,7 @@ function AutoPlayer(board) {
 		availableCells = getAvailableCells();
 		idx = Math.floor(Math.random()*availableCells.length);
 		cell = availableCells[idx];
-		board.move(cell[0], cell[1]);
+		board.move(cell);
 	}
 }
 
@@ -118,22 +113,18 @@ function SmartPlayer(board) {
 	var powers = [ 1, 3, 9, 27, 81, 243, 729, 2187, 6561 ]; // powers of 3
 
 	function boardToInt() {
-		var n=0;
-		for (x=0; x<CELLS_X; ++x)
-			for (y=0; y<CELLS_Y; ++y) {
-				idx = y*CELLS_X+x;
-				n += board.cell(x,y)*powers[idx];
-			}
-		return n;
+		var result=0;
+		for (n=0; n<TOTAL_CELLS; ++n) {
+			result += board.cell(n)*powers[n];
+		}
+		return result;
 	}
 
 	this.move = function() {
 		if (board.isGameEnded()) return;
 		n = boardToInt();
 		cell = moves[n];
-		x = cell % CELLS_X;
-		y = Math.floor(cell/CELLS_X);
-		board.move(x,y);
+		board.move(cell);
 	}
 }
 
@@ -166,10 +157,12 @@ function Game() {
 	}
   }
   
-  function drawCell(x,y,content,isWinner) {
+  function drawCell(n, content, isWinner) {
 	if (content == EMPTY) return;
-	x0 = Math.floor((x+0.5)*CELL_SIZE_X);
-	y0 = Math.floor((y+0.5)*CELL_SIZE_Y);
+	var y = Math.floor(n/CELLS_X);
+	var x = n % CELLS_X;
+	var x0 = Math.floor((x+0.5)*CELL_SIZE_X);
+	var y0 = Math.floor((y+0.5)*CELL_SIZE_Y);
 	
 	if (isWinner) {
 		ctx.fillStyle = "#EE2222";
@@ -201,7 +194,8 @@ function Game() {
   }
   
   function onClickCell(x,y) {
-    board.move(x,y);
+	var n = y*CELLS_X+x;
+    board.move(n);
 	autoPlayer.move();
   }
   
