--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html>
 <head>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Tic-tac-toe</title>
 <style>
 .main {
@@ -57,6 +58,34 @@
 		height: 90vw;
 	}
 }
+
+@media only screen and (max-height: 500px) and (orientation: landscape) {
+	body {
+		padding: 0px;
+		margin: 0px;
+	}
+	h1 {
+		display: none;
+	}
+	.main {
+		width: 100vh;
+	}
+	.playAgain {
+		position: absolute;
+		border: 1px solid black;
+		background-color: #FFEEEEE0;
+		top: 50%;
+		left: 50%;
+		width: 60%;
+		margin-right: -50%;
+		transform: translate(-50%, -50%);
+	}
+	#canvas {
+		width: 90vh;
+		height: 90vh;
+	}
+}
+
 </style>
 <script src="moves.js"></script>
 
